--- a/starter/index.html
+++ b/starter/index.html
@@ -22,7 +22,7 @@
                             <a href="#online-reputation-management">Online Reputation Management</a>
                         </li>
                         <li>
-                            <a href="#social-media-marketing">Social Media Marketing!</a>
+                            <a href="#social-media-marketing">Social Media Marketing</a>
                         </li>
                     </ul>
                 </nav>
@@ -31,42 +31,51 @@
     </section>
 
     <section>
-        <article>
         <div class="hero"></div>
         <div class="content">
-            <div class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" />
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they
-                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                    your visibility and find the right customers for your business.
-                </p>
-            </div>
-            <div id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" alt="Online-reputation-management image"
-                    class="float-right" />
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                    internet connection to say whatever they want about your business. Online Reputation Management
-                    gives
-                    you the control over what potential customers see when they search for your business.
-                </p>
-            </div>
-            <div id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image"
-                    class="float-left" />
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
-                    you
-                    determine which platforms are suited to your brand, using analytics to find the right markets and
-                    increase your lead generation.
-                </p>
-            </div>
+            <article>
+                <div class="search-engine-optimization">
+                    <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" />
+                    <h2>Search Engine Optimization</h2>
+                    <p>
+                        The dominance of mobile internet use means that users are searching for the right business as
+                        they
+                        travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to
+                        increase
+                        your visibility and find the right customers for your business.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <div id="online-reputation-management" class="online-reputation-management">
+                    <img src="./assets/images/online-reputation-management.jpg" alt="Online-reputation-management image"
+                        class="float-right" />
+                    <h2>Online Reputation Management</h2>
+                    <p>
+                        The web is full of opinions, and some of these can be negative. Social media allows anyone with
+                        an
+                        internet connection to say whatever they want about your business. Online Reputation Management
+                        gives
+                        you the control over what potential customers see when they search for your business.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <div id="social-media-marketing" class="social-media-marketing">
+                    <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image"
+                        class="float-left" />
+                    <h2>Social Media Marketing</h2>
+                    <p>
+                        Social media continues to have a sizable influence on buying habits. Social media marketing
+                        helps
+                        you
+                        determine which platforms are suited to your brand, using analytics to find the right markets
+                        and
+                        increase your lead generation.
+                    </p>
+                </div>
+            </article>
         </div>
-    </article>
     </section>
 
     <section>
