Added comments to HTML

--- a/starter/index.html
+++ b/starter/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en-gb"> <!--Language specified-->
 
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon website</title>
+    <title>Horiseon website</title> <!--Descriptive title-->
 </head>
 
-<body>
-
-    <section>
+<body> <!--Body section-->
+    <section> <!--Section tag-->
         <div class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
-            <div class="navbar">
+            <div class="navbar"> <!--Made a navbar class so that the code is more decsriptive and informative-->
                 <nav>
                     <ul>
                         <li>
@@ -33,9 +32,9 @@
     <section>
         <div class="hero"></div>
         <div class="content">
-            <article>
+            <article> <!--Article tag to access those functionalities and to make the code more informative-->
                 <div class="search-engine-optimization">
-                    <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" />
+                    <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" /> <!--Added alt to all images-->
                     <h2>Search Engine Optimization</h2>
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as
@@ -79,11 +78,11 @@
     </section>
 
     <section>
-        <aside>
+        <aside> <!--Added an aside tag to give the reader an idea of what the layout of the website looks like and to make the code more informative of where this div is-->
             <div class="benefits">
                 <div class="benefit-lead">
                     <h3>Lead Generation</h3>
-                    <img src="./assets/images/lead-generation.png" alt="lead-generation image" />
+                    <img src="./assets/images/lead-generation.png" alt="lead-generation image" /> <!--Added alt to all images-->
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers
                         directly
@@ -113,7 +112,7 @@
     </section>
 
     <section>
-        <footer>
+        <footer> <!--Added a footer tag to signify the start of the footer-->
             <div class="footer">
                 <h2>Made with ❤️️ by Horiseon</h2>
                 <p>
