File restructuring to fix deployment issues: could not deploy with previous file structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Horiseon website</title> <!--Descriptive title-->
 </head>
 
@@ -34,7 +34,8 @@
         <div class="content">
             <article> <!--Article tag to access those functionalities and to make the code more informative-->
                 <div class="search-engine-optimization">
-                    <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" /> <!--Added alt to all images-->
+                    <img src="./images/search-engine-optimization.jpg" alt="SEO image" class="float-left" />
+                    <!--Added alt to all images-->
                     <h2>Search Engine Optimization</h2>
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as
@@ -47,7 +48,7 @@
             </article>
             <article>
                 <div id="online-reputation-management" class="online-reputation-management">
-                    <img src="./assets/images/online-reputation-management.jpg" alt="Online-reputation-management image"
+                    <img src="./images/online-reputation-management.jpg" alt="Online-reputation-management image"
                         class="float-right" />
                     <h2>Online Reputation Management</h2>
                     <p>
@@ -61,7 +62,7 @@
             </article>
             <article>
                 <div id="social-media-marketing" class="social-media-marketing">
-                    <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image"
+                    <img src="./images/social-media-marketing.jpg" alt="social-media-marketing image"
                         class="float-left" />
                     <h2>Social Media Marketing</h2>
                     <p>
@@ -78,11 +79,13 @@
     </section>
 
     <section>
-        <aside> <!--Added an aside tag to give the reader an idea of what the layout of the website looks like and to make the code more informative of where this div is-->
+        <aside>
+            <!--Added an aside tag to give the reader an idea of what the layout of the website looks like and to make the code more informative of where this div is-->
             <div class="benefits">
                 <div class="benefit-lead">
                     <h3>Lead Generation</h3>
-                    <img src="./assets/images/lead-generation.png" alt="lead-generation image" /> <!--Added alt to all images-->
+                    <img src="./images/lead-generation.png" alt="lead-generation image" />
+                    <!--Added alt to all images-->
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers
                         directly
@@ -91,7 +94,7 @@
                 </div>
                 <div class="benefit-brand">
                     <h3>Brand Awareness</h3>
-                    <img src="./assets/images/brand-awareness.png" alt="brand-awareness image" />
+                    <img src="./images/brand-awareness.png" alt="brand-awareness image" />
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and
                         visibility
@@ -100,7 +103,7 @@
                 </div>
                 <div class="benefit-cost">
                     <h3>Cost Management</h3>
-                    <img src="./assets/images/cost-management.png" alt="cost-management image"></img>
+                    <img src="./images/cost-management.png" alt="cost-management image"></img>
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no
                         longer
