removed img src from html in hero class. When open in live server the page appears how the mock-up looks. Deployed pages is being slow or errored?

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section>
-        <div class="hero"><img src="./images/digital-marketing-meeting.jpg" alt="digital marketing meeting hero image"/></div>
+        <div class="hero"></div>
         <div class="content">
             <article> <!--Article tag to access those functionalities and to make the code more informative-->
                 <div class="search-engine-optimization">
